[tool.poetry]
name = "my-cluster-setup"
version = "0.1.1"
description = "Cluster configuration and setup scripts."
authors = ["Seung Hyun Kim <skim0119@gmail.com>"]
license = "MIT"
packages = [{include = "my_cluster_setup"}]


[tool.poetry.scripts]
send_startup_message = "my_cluster_setup.slack.job_started:send_message"


[tool.poetry.dependencies]
python = "^3.8"
parsl = "^1.2.0"
globus-sdk = "^3.32.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
